# TRIARC

./: .env.example  README.md  pyproject.toml
configs/: models.yaml
docs/: amd-fireworks.md  roadmap.md
input/: tasks.json
orchestrator/: cli.py  develop_loop.py  planner.py  registry.py  report.py  schema.py  telemetry.py  tier1_client.py  worker_client.py
orchestrator/api/: app.py
orchestrator/security/: egress.py  gates.py  ingress.py
orchestrator/servers/code_sandbox/: runtime.py  server.py
orchestrator/servers/filesystem/: ops.py  server.py
orchestrator/servers/git/: ops.py  server.py
output/: results.json
tests/: _openai_fakes.py  test_cli.py  test_code_sandbox_runtime.py  test_develop_loop.py  test_egress.py  test_filesystem_ops.py  test_filesystem_server.py  test_gates.py  test_git_ops.py  test_ingress.py  test_planner.py  test_registry.py  test_report.py  test_telemetry.py  test_tier1_client.py  test_worker_client.py
