[project]
name = "triarc"
version = "0.1.0"
description = "TRIARC -- the autonomous AI developer that routes before it reasons"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "openai>=1.30",
    "click>=8.1",
    "mcp>=1.2",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
triarc = "orchestrator.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["orchestrator*"]
